--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                 <div class="col-md-4 fade">
                     <div class="card p-4 text-center">
                         <i class="bi bi-cpu fs-1 text-primary"></i>
-                        <h5 class="mt-3">C++</h5>
+                        <h5 class="mt-3">C++ and C#</h5>
                         <h6 class="text-muted">Programming Basics</h6>
                         <span class="fw-bold text-primary">65%</span>
                         <div class="progress mt-2">
@@ -654,7 +654,7 @@
                         <img src="images/portal quests.png" alt="Interactive App">
                         <div class="card-body">
                             <h5 class="fw-bold">Portal Quests Game</h5>
-                            <p class="text-muted">Bootstrap Grid</p>
+                            <p class="text-muted">C#-Based Game </p>
                             <button class="btn btn-sm btn-primary" onclick="showProject('Portfolio')">View Project</button>
                         </div>
                     </div>
@@ -739,12 +739,12 @@
         </div>
     </footer>
 
-    <!-- Scroll to Top Button -->
+    <!-- sccroll to top buttooon -->
     <button class="scroll-top" onclick="scrollToTop()">
         <i class="bi bi-arrow-up"></i>
     </button>
 
-    <!-- Bootstrap JS -->
+    <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
