--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                     <div class="card p-4 text-center">
                         <i class="bi bi-code-slash fs-1 text-primary"></i>
                         <h5 class="mt-3">HTML and CSS</h5>
-                        <h6 class="text-muted">Web Structure and </h6>
+                        <h6 class="text-muted">Web Structure and Styling </h6>
                         <span class="fw-bold text-primary">90%</span>
                         <div class="progress mt-2">
                             <div class="progress-bar bg-primary" style="width: 90%"></div>
