--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         <div class="social-icons">
             <a href="#" aria-label="GitHub"><i class="bi bi-github"></i></a>
             <a href="#" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
-            <a href="#" aria-label="Twitter"><i class="bi bi-twitter"></i></a>
+            <a href="#" aria-label="Twitter"><i class="bi bi-facebook"></i></a>
             <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
         </div>
     </div>
@@ -731,7 +731,7 @@
             <div class="social-icons mb-3">
                 <a href="#"><i class="bi bi-github"></i></a>
                 <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
                 <a href="#"><i class="bi bi-instagram"></i></a>
             </div>
             <p class="mb-1" style="opacity: 0.8;">© 2026 Clark Adrian C. Billedo. Thank you!</p>
